Move portal up to avoid covering Login button

--- a/assets/css/misc/portal.css
+++ b/assets/css/misc/portal.css
@@ -3,6 +3,12 @@
     opacity: 0 !important;
 }
 
+@media screen and (max-width: 400px) {
+    .gh-portal-triggerbtn-iframe {
+        bottom: 125px;
+    }
+}
+
 @media screen and (min-width: 768px) {
     .gh-portal-triggerbtn-iframe {
         margin-bottom: 75px;
